<resources>
    <string name="app_name">Nokket</string>

    <!-- MainActivity -->
    <string name="one_dollar">$1</string>
    <string name="two_dollars">$2</string>
    <string name="five_dollars">$5</string>
    <string name="ten_dollars">$10</string>
    <string name="twenty_dollars">$20</string>
    <string name="fifty_dollars">$50</string>

    <!-- DonateActivity -->
    <string name="connecting">Connecting...</string>
    <string name="amount">Amount: $</string>
    <string name="nfc_prompt">Hold your contactless payment card to the back of the phone</string>
    <string name="processing">Processing...</string>

    <!-- ResultActivity -->
    <string name="success">Success</string>
    <string name="success_text">Thank you for donating with Nokket</string>
    <string name="error">Error</string>
    <string name="error_text">Something went wrong - Please try again later</string>

</resources>
