<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.marco.nokket.MainActivity">

    <LinearLayout
        android:id="@+id/action_buttons"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/one_dollar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/one_dollar"
            android:onClick="launchDonate" />

        <Button
            android:id="@+id/two_dollars"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/two_dollars"
            android:onClick="launchDonate" />

        <Button
            android:id="@+id/five_dollars"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/five_dollars"
            android:onClick="launchDonate" />

        <Button
            android:id="@+id/ten_dollars"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ten_dollars"
            android:onClick="launchDonate" />

        <Button
            android:id="@+id/twenty_dollars"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/twenty_dollars"
            android:onClick="launchDonate" />

        <Button
            android:id="@+id/more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/more"
            android:onClick="launchMore" />

    </LinearLayout>

</RelativeLayout>
